Updated styling for blog pages and added alt text to headers and footers

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <header>
         <div class="heading-logo">
             <a href="./index.html">
-                <img src="./images/branding/nm-black.png"/>
+                <img src="./images/branding/nm-black.png"
+                alt="Naomi Mowbray website logo in black"/>
             </a>
         </div>
         <nav class="nav-items">
@@ -56,13 +57,16 @@
         </div>
 
         <div class="cafe-pic">
-            <img src="./images/cafe.jpg"/>
+            <img src="./images/cafe.jpg"
+            alt="Naomi sitting at a cafe with a huge smile and head resting on hand"/> 
+            />
         </div>
     </main>
 
     <footer>
         <div class="signature">
-            <img src="./images/branding/nm-white.png"/>
+            <img src="./images/branding/nm-white.png"
+            alt="Naomi Mowbray website logo in white"/>
         </div>
         <div class="webdev">
             <p>WEB DESIGN + DEVELOPMENT</p>
