--- a/pages/meet.html
+++ b/pages/meet.html
@@ -29,7 +29,8 @@
     <header>
         <div class="heading-logo">
             <a href="../index.html">
-                <img src="../images/branding/nm-black.png"/>
+                <img src="../images/branding/nm-black.png"
+                alt="Naomi Mowbray website logo in black"/>
             </a>
         </div>
         <nav class="nav-items">
@@ -125,7 +126,8 @@
 
     <footer>
         <div class="signature">
-            <img src="../images/branding/nm-white.png"/>
+            <img src="../images/branding/nm-white.png"
+            alt="Naomi Mowbray website logo in white"/>
         </div>
         <div class="webdev">
             <p>WEB DESIGN + DEVELOPMENT</p>
