--- a/pages/blogs/blog-code.html
+++ b/pages/blogs/blog-code.html
@@ -29,7 +29,8 @@
     <header>
         <div class="heading-logo">
             <a href="./index.html">
-                <img src="../../images/branding/nm-black.png"/>
+                <img src="../../images/branding/nm-black.png"
+                alt="Naomi Mowbray website logo in black"/>
             </a>
         </div>
         <nav class="nav-items">
@@ -38,6 +39,7 @@
     </header>
 
     <main>
+        <div class="container">
         <img 
             src="../../images/cat-grumpy.jpg"
             alt="grumpy cat in grass"/> 
@@ -64,12 +66,13 @@
                 </a>
             </button>
         </div>    
-
+</div>
     </main>
 
     <footer>
         <div class="signature">
-            <img src="../../images/branding/nm-white.png"/>
+            <img src="../../images/branding/nm-white.png"
+            alt="Naomi Mowbray website logo in white"/>
         </div>
         <div class="webdev">
             <p>WEB DESIGN + DEVELOPMENT</p>
