--- a/pages/blogs/blog-semantics.html
+++ b/pages/blogs/blog-semantics.html
@@ -7,7 +7,7 @@
     <title>Frantic About Semantics</title>
 
     <!-- styling -->
-    <link rel="stylesheet" href="../styling/pages/blog.css"/>
+    <link rel="stylesheet" href="../../styling/pages/blog.css"/>
 
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../../images/favicon/apple-touch-icon.png">
@@ -28,8 +28,9 @@
 <body>
     <header>
         <div class="heading-logo">
-            <a href="./index.html">
-                <img src="../../images/branding/nm-black.png"/>
+            <a href="../../index.html">
+                <img src="../../images/branding/nm-black.png"
+                alt="Naomi Mowbray website logo in black"/>
             </a>
         </div>
         <nav class="nav-items">
@@ -38,6 +39,7 @@
     </header>
 
     <main>
+        <div class="container">
         <img 
             src="../../images/cat-computer.jpg"
             alt="cat at a computer"/> 
@@ -63,12 +65,13 @@
                 </a>
             </button>
         </div>    
-
+</div>
     </main>
 
     <footer>
         <div class="signature">
-            <img src="../../images/branding/nm-white.png"/>
+            <img src="../../images/branding/nm-white.png"
+            alt="Naomi Mowbray website logo in white"/>
         </div>
         <div class="webdev">
             <p>WEB DESIGN + DEVELOPMENT</p>
