--- a/pages/diary.html
+++ b/pages/diary.html
@@ -29,7 +29,8 @@
     <header>
         <div class="heading-logo">
             <a href="../index.html">
-                <img src="../images/branding/nm-black.png"/>
+                <img src="../images/branding/nm-black.png"
+                alt="Naomi Mowbray website logo in black"/>
             </a>
         </div>
         <nav class="nav-items">
@@ -157,10 +158,11 @@
 
     <footer>
         <div class="signature">
-            Naomi Mowbray
+            <img src="../../images/branding/nm-white.png"
+            alt="Naomi Mowbray website logo in white"/>
         </div>
         <div class="webdev">
-            <p>WEB DEVELOPER  +  CODER</p>
+            <p>WEB DESIGN + DEVELOPMENT</p>
         </div>
 
         <!-- social icons/outside links -->
