--- a/pages/meet.html
+++ b/pages/meet.html
@@ -130,7 +130,7 @@
             alt="Naomi Mowbray website logo in white"/>
         </div>
         <div class="webdev">
-            <p>WEB DESIGN + DEVELOPMENT</p>
+            <a href="https://nallacreative.com.au/" target="_blank">WEB DESIGN + DEVELOPMENT</a>
         </div>
 
         <!-- social icons/outside links -->
