--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
         <div class="cafe-pic">
             <img src="./images/cafe.jpg"
             alt="Naomi sitting at a cafe with a huge smile and head resting on hand"/> 
-            />
         </div>
     </main>
 
@@ -69,7 +68,7 @@
             alt="Naomi Mowbray website logo in white"/>
         </div>
         <div class="webdev">
-            <p>WEB DESIGN + DEVELOPMENT</p>
+            <a href="https://nallacreative.com.au/" target="_blank">WEB DESIGN + DEVELOPMENT</a>
         </div>
 
         <!-- social icons/outside links -->
